--- a/src/components/load-more-buton/styles.css
+++ b/src/components/load-more-buton/styles.css
@@ -1,30 +1,28 @@
-.container{
+.load-more-container {
     width: 100vw;
     height: auto;
-    overflow: scroll;
     display: flex;
     flex-direction: column;
     gap: 2px;
 }
 
-.product-container{
+.product-container {
     display: grid;
     grid-template-columns: repeat(4, 1fr);
     gap: 10px;
+    width: 100vw;
+    height: auto;
 }
 
-.product{
-    padding: 2px;
+.product {
+    padding: 20px;
     border: 1px solid;
     display: flex;
     flex-direction: column;
     gap: 10px;
 }
 
-p {
-    font-size: 10px;
-}
-
-img{
+.product img {
     width: 100%;
+    height: 100%;
 }
